--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:22.0.0'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
     testCompile 'junit:junit:4.12'
 }
