--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,14 @@
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
+.idea/vcs.xml
+.idea/modules.xml
+.idea/misc.xml
+.idea/gradle.xml
 .DS_Store
 /build
 /captures
 .externalNativeBuild
+app/libs/
+app/src/main/java/com/sighs/imputmethod/utils/
+gen/
