--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,8 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.android.support:appcompat-v7:22.1.0'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
+    compile group: 'net.lingala.zip4j', name: 'zip4j', version: '1.2.4'
     testCompile 'junit:junit:4.12'
 }
